ajout jour 7 , Temps d'execution 11,5 ms

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "day4": "node advent2022_4.js",
         "day5": "node advent2022_5.js",
         "day6": "node advent2022_6.js",
+        "day7": "node advent2022_7.js",
         "test": "node test.js",
         "start": "ts-node ./src/index.ts"
     },
