--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "day6": "node advent2022_6.js",
         "day7": "node advent2022_7.js",
         "day8": "node advent2022_8.js",
+        "day9": "node advent2022_9.js",
         "test": "node test.js",
         "start": "ts-node ./src/index.ts"
     },
