--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "day9": "node advent2022_9.js",
         "day10": "node advent2022_10.js",
         "day11": "node advent2022_11.js",
+        "day12": "node advent2022_12.js",
         "test": "node test.js",
         "start": "ts-node ./src/index.ts"
     },
