--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
         "day10": "node advent2022_10.js",
         "day11": "node advent2022_11.js",
         "day12": "node advent2022_12.js",
-        "test": "node test.js",
+        "test": "node test12.js",
         "start": "ts-node ./src/index.ts"
     },
     "devDependencies": {
