--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "day11": "node advent2022_11.js",
         "day12": "node advent2022_12.js",
         "day13": "node advent2022_13.js",
+        "day14": "node advent2022_14.js",
         "test": "node test12.js",
         "start": "ts-node ./src/index.ts"
     },
