--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
         "day12": "node advent2022_12.js",
         "day13": "node advent2022_13.js",
         "day14": "node advent2022_14.js",
-        "test": "node test14.js",
+        "day15": "node advent2022_15.js",
+        "day16": "node advent2022_16.js",
+        "day17": "node advent2022_17.js",
+        "test": "node test16.js",
         "start": "ts-node ./src/index.ts"
     },
     "devDependencies": {
