--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
         "day16": "node advent2022_16.js",
         "day17": "node advent2022_17.js",
         "day18": "node advent2022_18.js",
+        "day19": "node advent2022_19.js",
+        "day20": "node advent2022_20.js",
+        "day21": "node advent2022_21.js",
         "test": "node test16.js",
         "start": "ts-node ./src/index.ts"
     },
