--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
         "day19": "node advent2022_19.js",
         "day20": "node advent2022_20.js",
         "day21": "node advent2022_21.js",
+        "day22": "node advent2022_22.js",
+        "day23": "node advent2022_23.js",
         "test": "node test14.ts",
         "start": "ts-node ./src/index.ts"
     },
